[gd_scene load_steps=2 format=3 uid="uid://54e08u1p435d"]

[ext_resource type="Script" uid="uid://5y8akgd7eyro" path="res://sava_load_menu.gd" id="1_x6xga"]

[node name="SavaLoadMenu" type="CanvasLayer"]
script = ExtResource("1_x6xga")

[node name="Slot1" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="Slot2" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="Slot3" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="BackButton" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[connection signal="pressed" from="Slot1" to="." method="_on_slot_1_pressed"]
[connection signal="pressed" from="Slot2" to="." method="_on_slot_2_pressed"]
[connection signal="pressed" from="Slot3" to="." method="_on_slot_3_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
